--- a/.github/workflows/Build_SF.yml
+++ b/.github/workflows/Build_SF.yml
@@ -5,6 +5,11 @@ name: 编译op
 on:
   repository_dispatch:
   workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
 # 定时触发开始编译(把下面两个#去掉开启,时间设置请看定时编译说明)
 #  schedule:
 #   - cron: 0 16 */2 * *
