--- a/.github/workflows/Build_SF.yml
+++ b/.github/workflows/Build_SF.yml
@@ -17,13 +17,15 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: aarch64/ARMv8_SF.config
-  DIY_P1_SH: diy-part1.sh
+  CONFIG_FILE: .config
+  #CONFIG_FILE: aarch64/ARMv8_SF.config   
   DIY_P2_SH: diy-part2.sh
+  SSH_ACTIONS: true
+  UPLOAD_CONFIG: true
+  DELETE_ARTIFACTS: true   # 删除旧的工作流程运行和工件
   TZ: Asia/Shanghai
-  FILE_NAME: Build
-  PRODUCT_NAME: Build_SF
+  FILE_NAME: config
+  PRODUCT_NAME: Build_config
 
 jobs:
   build:
@@ -116,7 +118,14 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P2_SH
         sed -i 's/192.168.1.1/192.168.2.1/g' package/base-files/files/bin/config_generate
         sed -i 's/OpenWrt/MRG AutoBuild ${{ env.DATE1 }} @ OpenWrt/g' package/lean/default-settings/files/zzz-default-settings
-        
+      
+    - name: SSH远程连接（配置固件）
+      uses: P3TERX/ssh2actions@main
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }} 
+    
     - name: 下载软件包
       id: package
       run: |
